@@ -376,9 +376,6 @@ class ContentModelArticles extends JModelList
 		foreach ($items as & $item)
 		{
 			$articleParams = new JRegistry;
-			/*
-			 *  TODO: investigate if it is better to sync the namespace usage in JRegistry and JParameter, if we let it unsync the we need to know what namespace are the Objects are using before we merge
-			 */
 			$articleParams->loadJSON($item->attribs);
 			
 			// Unpack readmore and layout params
@@ -390,7 +387,7 @@ class ContentModelArticles extends JModelList
 			// For blogs, article params override menu item params only if menu param = 'use_article'
 			// Otherwise, menu item params control the layout
 			// If menu item is 'use_article' and there is no article param, use global
-			if (JRequest::getString('layout') == 'blog' || JRequest::getString('view') == 'frontpage')
+			if (JRequest::getString('layout') == 'blog' || JRequest::getString('view') == 'featured')
 			{
 				// create an array of just the params set to 'use_article'
 				$menuParamsArray = $this->getState('params')->toArray();
@@ -413,7 +410,7 @@ class ContentModelArticles extends JModelList
 					}
 				}
 				// merge the selected article params
-				if (count($articleArray > 0))
+				if (count($articleArray) > 0)
 				{
 					$articleParams = new JRegistry;
 					$articleParams->loadArray($articleArray);
