@@ -36,14 +36,12 @@ class ContentModelFeatured extends ContentModelArticles
 	protected function populateState()
 	{
 		parent::populateState();
-
-		// Add blog properties
-		$params = $this->_state->params;
-
+		
 		// List state information
 		$limitstart = JRequest::getVar('limitstart', 0, '', 'int');
 		$this->setState('list.start', $limitstart);
 		
+		$params = $this->_state->params;
 		$limit = $params->get('num_leading_articles') + $params->get('num_intro_articles') + $params->get('num_links');
 		$this->setState('list.limit', $limit);
 		$this->setState('list.links', $params->get('num_links'));
